# ganji-wallet-service

./: .gitignore  LICENSE  README.md  tsconfig.json
api/: .env.example  .npmrc  ecosystem.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
api/scripts/: check-upload-price.ts  mint-token.ts  test-license.ts  test-litecoin.ts  test-transfer.ts  upload-metadata.ts  verify-deployment.ts
api/src/: index.ts
api/src/config/: env.ts  index.ts  litecoin.config.ts  solana.config.ts
api/src/middleware/: auth.middleware.ts  error.middleware.ts  ratelimit.middleware.ts  validation.middleware.ts
api/src/routes/: health.routes.ts  index.ts  litecoin.routes.ts  solana.routes.ts
api/src/services/: litecoin.service.ts  logger.service.ts  solana.service.ts
api/src/types/: api.types.ts  license.idl.ts  litecoin.types.ts  solana.types.ts
api/src/validators/: litecoin.validators.ts  solana.validators.ts
api/tests/integration/: errors.test.ts  health.routes.test.ts  litecoin.routes.test.ts  solana.routes.test.ts
api/tests/performance/: benchmark.test.ts
api/tests/unit/: index.test.ts
api/tests/unit/config/: env.test.ts
api/tests/unit/middleware/: auth.middleware.test.ts  error.middleware.test.ts  ratelimit.middleware.test.ts  validation.middleware.test.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
solana-license-program/: Anchor.toml  Cargo.toml
solana-license-program/programs/license-checker/: Cargo.toml
solana-license-program/programs/license-checker/src/: lib.rs
(+5 files in other folders)
